--- a/game.html
+++ b/game.html
@@ -14,39 +14,57 @@
             box-sizing: border-box;
         }
 
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            position: fixed;
+            touch-action: none;
+        }
+
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
             background: #f7f7f7;
             font-family: "Doto", sans-serif;
-            overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
 
         #gameContainer {
             text-align: center;
             position: relative;
-            width: 100%;
-            max-width: 1200px;
-            padding: 0 10px;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
         #gameCanvas {
             border: 2px solid #333;
             background: white;
             display: block;
-            margin: 0 auto;
-            max-width: 100%;
-            height: auto;
         }
 
         #score {
-            font-size: 24px;
-            margin: 10px;
+            font-size: 20px;
+            margin: 5px;
             font-weight: bold;
-            position: relative;
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
             z-index: 10;
+        }
+
+        @media (max-width: 768px) {
+            #score {
+                font-size: 16px;
+                top: 5px;
+            }
         }
 
         #gameOver {
@@ -89,29 +107,47 @@
         }
 
         #instructions {
-            margin: 10px;
+            margin: 5px;
             color: #666;
+            font-size: 14px;
+            position: absolute;
+            bottom: 10px;
+        }
+
+        @media (max-width: 768px) {
+            #instructions {
+                font-size: 12px;
+                bottom: 5px;
+            }
         }
 
         /* BGM 컨트롤러 */
         #bgmController {
             position: absolute;
-            top: 100px;
+            top: 40px;
             left: 50%;
             transform: translateX(-50%);
             background: rgba(255, 255, 255, 0.95);
-            padding: 15px;
+            padding: 10px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
             display: flex;
-            gap: 10px;
+            gap: 8px;
             align-items: center;
             z-index: 5;
         }
 
+        @media (max-width: 768px) {
+            #bgmController {
+                padding: 8px;
+                gap: 5px;
+                top: 30px;
+            }
+        }
+
         #bgmController button {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             border-radius: 50%;
             border: none;
             background: #5cb85c;
@@ -120,7 +156,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 18px;
+            font-size: 16px;
             padding: 0;
             margin: 0;
         }
@@ -137,6 +173,23 @@
             font-size: 12px;
             color: #666;
             min-width: 60px;
+        }
+
+        @media (max-width: 768px) {
+            #bgmController button {
+                width: 30px;
+                height: 30px;
+                font-size: 14px;
+            }
+
+            #bgmController input[type="range"] {
+                width: 60px;
+            }
+
+            #bgmController .track-info {
+                font-size: 10px;
+                min-width: 50px;
+            }
         }
     </style>
 </head>
@@ -168,17 +221,25 @@
 
         // 모바일 화면 크기에 맞게 캔버스 조정
         function resizeCanvas() {
-            const container = document.getElementById('gameContainer');
-            const maxWidth = container.clientWidth - 20; // padding 고려
-            const aspectRatio = 400 / 1200; // height / width
+            const vw = window.innerWidth;
+            const vh = window.innerHeight;
+            const gameRatio = 1200 / 400; // 게임 캔버스 비율 (width / height)
 
-            if (maxWidth < 1200) {
-                canvas.style.width = maxWidth + 'px';
-                canvas.style.height = (maxWidth * aspectRatio) + 'px';
+            let canvasWidth, canvasHeight;
+
+            // 화면 비율에 맞춰서 캔버스 크기 결정
+            if (vw / vh > gameRatio) {
+                // 화면이 더 넓음 - 높이 기준으로 조정
+                canvasHeight = vh * 0.7; // 화면 높이의 70%
+                canvasWidth = canvasHeight * gameRatio;
             } else {
-                canvas.style.width = '1200px';
-                canvas.style.height = '400px';
+                // 화면이 더 좁음 - 너비 기준으로 조정
+                canvasWidth = vw * 0.95; // 화면 너비의 95%
+                canvasHeight = canvasWidth / gameRatio;
             }
+
+            canvas.style.width = canvasWidth + 'px';
+            canvas.style.height = canvasHeight + 'px';
         }
 
         // 초기 로드 및 리사이즈 시 호출
