--- a/game.html
+++ b/game.html
@@ -124,9 +124,8 @@
         /* BGM 컨트롤러 */
         #bgmController {
             position: absolute;
-            top: 40px;
-            left: 50%;
-            transform: translateX(-50%);
+            top: 10px;
+            right: 10px;
             background: rgba(255, 255, 255, 0.95);
             padding: 10px;
             border-radius: 10px;
@@ -141,7 +140,8 @@
             #bgmController {
                 padding: 8px;
                 gap: 5px;
-                top: 30px;
+                top: 5px;
+                right: 5px;
             }
         }
 
