--- a/game.html
+++ b/game.html
@@ -197,7 +197,7 @@
     <div id="gameContainer">
         <div id="score">점수: 0</div>
         <canvas id="gameCanvas" width="1200" height="400"></canvas>
-        <div id="instructions">스페이스바: 점프 | 클릭하여 시작</div>
+        <div id="instructions">스페이스바: 점프</div>
 
         <!-- BGM 컨트롤러 -->
         <div id="bgmController">
@@ -220,8 +220,21 @@
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
+        // 모바일 여부 감지
+        function isMobile() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
+
         // 모바일 화면 크기에 맞게 캔버스 조정
         function resizeCanvas() {
+            if (!isMobile()) {
+                // PC 환경: 원래 크기 유지
+                canvas.style.width = '1200px';
+                canvas.style.height = '400px';
+                return;
+            }
+
+            // 모바일 환경: 화면에 맞게 조정
             const vw = window.innerWidth;
             const vh = window.innerHeight;
             const gameRatio = 1200 / 400; // 게임 캔버스 비율 (width / height)
@@ -849,6 +862,15 @@
                 restartGame();
             } else if (gameRunning) {
                 player.jump();
+            }
+        });
+
+        // 모바일에서 게임오버 모달 터치로 재시작
+        document.getElementById('gameOver').addEventListener('touchstart', (e) => {
+            if (gameStarted && !gameRunning) {
+                e.preventDefault();
+                e.stopPropagation();
+                restartGame();
             }
         });
 
