--- a/game.html
+++ b/game.html
@@ -14,29 +14,20 @@
             box-sizing: border-box;
         }
 
-        html, body {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            position: fixed;
-            touch-action: none;
-        }
-
         body {
             display: flex;
             justify-content: center;
             align-items: center;
+            min-height: 100vh;
             background: #f7f7f7;
             font-family: "Doto", sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 20px 0;
         }
 
         #gameContainer {
             text-align: center;
             position: relative;
-            width: 100vw;
-            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
