mobile bug fixed _ add loading

--- a/game.html
+++ b/game.html
@@ -182,9 +182,42 @@
                 min-width: 50px;
             }
         }
+
+        /* 로딩 화면 */
+        #loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #f7f7f7;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        #loading .spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid #ddd;
+            border-top: 5px solid #5cb85c;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
+    <!-- 로딩 화면 -->
+    <div id="loading">
+        <div class="spinner"></div>
+    </div>
+
     <div id="gameContainer">
         <div id="score">점수: 0</div>
         <canvas id="gameCanvas" width="1200" height="400"></canvas>
@@ -247,9 +280,6 @@
             canvas.style.width = canvasWidth + 'px';
             canvas.style.height = canvasHeight + 'px';
         }
-
-        // 즉시 실행
-        resizeCanvas();
 
         // 리사이즈 및 회전 시 호출
         window.addEventListener('resize', resizeCanvas);
@@ -453,9 +483,29 @@
         const obstacleImages = {};
         const obstacleTypes = ['tall', 'short', 'flying'];
 
-        // 이미지 로드
+        // 이미지 로드 및 로딩 완료 감지
+        let imagesLoaded = 0;
+        const totalImages = obstacleTypes.length + 1; // 장애물 이미지 + 플레이어 이미지
+
+        function checkAllLoaded() {
+            imagesLoaded++;
+            if (imagesLoaded >= totalImages) {
+                // 모든 이미지 로드 완료
+                resizeCanvas();
+                // 약간의 딜레이 후 로딩 화면 제거
+                setTimeout(() => {
+                    document.getElementById('loading').style.display = 'none';
+                }, 100);
+            }
+        }
+
+        // 플레이어 이미지 로드
+        player.img.onload = checkAllLoaded;
+
+        // 장애물 이미지 로드
         obstacleTypes.forEach(type => {
             obstacleImages[type] = new Image();
+            obstacleImages[type].onload = checkAllLoaded;
             obstacleImages[type].src = CONFIG.obstacles[type].imageSrc;
         });
 
