--- a/game.html
+++ b/game.html
@@ -34,6 +34,11 @@
             align-items: center;
         }
 
+        #canvasWrapper {
+            position: relative;
+            display: inline-block;
+        }
+
         #gameCanvas {
             border: 2px solid #333;
             background: white;
@@ -217,25 +222,29 @@
     </div>
 
     <div id="gameContainer">
-        <!-- BGM 컨트롤러 -->
-        <div id="bgmController">
-            <span class="track-info" id="trackInfo">BGM 1</span>
-            <button id="btnPrev" title="이전 곡">⏮</button>
-            <button id="btnPlayPause" title="재생/일시정지">▶</button>
-            <button id="btnNext" title="다음 곡">⏭</button>
-            <button id="btnMute" title="음소거">🔊</button>
-            <input type="range" id="volumeSlider" min="0" max="100" value="50" title="볼륨">
-        </div>
-
         <div id="score">점수: 0</div>
-        <canvas id="gameCanvas" width="1200" height="400"></canvas>
-        <div id="instructions">스페이스바: 점프</div>
 
-        <div id="gameOver">
-            <h2>Game Over!</h2>
-            <p>최종 점수: <span id="finalScore">0</span></p>
-            <p style="font-size: 16px; color: #666; margin-top: 10px;">스페이스바를 눌러 재시작</p>
+        <div id="canvasWrapper">
+            <!-- BGM 컨트롤러 -->
+            <div id="bgmController">
+                <span class="track-info" id="trackInfo">BGM 1</span>
+                <button id="btnPrev" title="이전 곡">⏮</button>
+                <button id="btnPlayPause" title="재생/일시정지">▶</button>
+                <button id="btnNext" title="다음 곡">⏭</button>
+                <button id="btnMute" title="음소거">🔊</button>
+                <input type="range" id="volumeSlider" min="0" max="100" value="50" title="볼륨">
+            </div>
+
+            <canvas id="gameCanvas" width="1200" height="400"></canvas>
+
+            <div id="gameOver">
+                <h2>Game Over!</h2>
+                <p>최종 점수: <span id="finalScore">0</span></p>
+                <p style="font-size: 16px; color: #666; margin-top: 10px;">스페이스바를 눌러 재시작</p>
+            </div>
         </div>
+
+        <div id="instructions">스페이스바: 점프</div>
     </div>
 
     <script>
