--- a/game.html
+++ b/game.html
@@ -244,7 +244,7 @@
             </div>
         </div>
 
-        <div id="instructions">스페이스바: 점프</div>
+        <div id="instructions">점프 : 클릭, 스페이스바</div>
     </div>
 
     <script>
@@ -855,7 +855,7 @@
             ctx.fillStyle = '#333';
             ctx.font = '30px Arial';
             ctx.textAlign = 'center';
-            ctx.fillText('클릭 또는 아무 키나 눌러 시작', canvas.width / 2, canvas.height / 2);
+            ctx.fillText('클릭 또는 스페이스바를 눌러 시작', canvas.width / 2, canvas.height / 2);
 
             // 지면 경계선 그리기
             ctx.strokeStyle = '#000';
