--- a/game.html
+++ b/game.html
@@ -919,16 +919,20 @@
 
         // 브라우저 전체에서 클릭 감지
         document.addEventListener('mousedown', (e) => {
-            // BGM 컨트롤러, 게임오버 모달, 버튼/인풋 클릭은 제외
+            // BGM 컨트롤러, 버튼/인풋 클릭은 제외
             if (e.target.closest('#bgmController') ||
-                e.target.closest('#gameOver') ||
                 e.target.tagName === 'BUTTON' ||
                 e.target.tagName === 'INPUT') {
                 return;
             }
 
+            e.preventDefault(); // 기본 동작 방지
+
             if (!gameStarted) {
                 startGame();
+            } else if (gameStarted && !gameRunning) {
+                // 게임오버 상태면 재시작
+                restartGame();
             } else if (gameRunning) {
                 player.jump();
             }
