--- a/game.html
+++ b/game.html
@@ -342,7 +342,7 @@
                 x: 80,                  // 시작 X 위치
                 width: 140,             // 표시 영역 너비
                 height: 100,            // 표시 영역 높이
-                imageSrc: 'assets/images/magnus.png', // 이미지 파일
+                imageSrc: 'magnusgame/assets/images/magnus.png', // 이미지 파일
                 imageWidth: null,       // 이미지 너비 (null = 비율 유지)
                 imageHeight: 100,       // 이미지 높이
                 hitbox: {               // 충돌 박스
@@ -358,7 +358,7 @@
                 spawnInterval: 100,     // 생성 간격 (프레임)
 
                 tall: {                 // 서있는 레니
-                    imageSrc: 'assets/images/leni-stand.png',
+                    imageSrc: 'magnusgame/assets/images/leni-stand.png',
                     width: 50,         // 표시 영역 너비
                     height: 100,        // 표시 영역 높이
                     imageWidth: null,   // 이미지 너비 (null = 비율 유지)
@@ -373,7 +373,7 @@
                 },
 
                 short: {                // 앉은 레니
-                    imageSrc: 'assets/images/leni-sit.png',
+                    imageSrc: 'magnusgame/assets/images/leni-sit.png',
                     width: 50,
                     height: 70,
                     imageWidth: null,
@@ -388,7 +388,7 @@
                 },
 
                 flying: {               // 당근
-                    imageSrc: 'assets/images/carrot.png',
+                    imageSrc: 'magnusgame/assets/images/carrot.png',
                     width: 50,
                     height: 20,
                     imageWidth: null,
@@ -406,16 +406,16 @@
 
             // 사운드 설정
             sounds: {
-                start: 'assets/sounds/start.wav',
-                bikeOn: 'assets/sounds/bike-on.mp3',
-                bikeRide: 'assets/sounds/bike-ride.mp3',
-                jump: 'assets/sounds/jump.wav',
-                bgm: ['assets/bgms/bgm_01.mp3', 'assets/bgms/bgm_02.mp3', 'assets/bgms/bgm_03.mp3', 'assets/bgms/bgm_04.mp3'],
-                crash: ['assets/sounds/crash.wav', 'assets/sounds/crash-bike.mp3'],
+                start: 'magnusgame/assets/sounds/start.wav',
+                bikeOn: 'magnusgame/assets/sounds/bike-on.mp3',
+                bikeRide: 'magnusgame/assets/sounds/bike-ride.mp3',
+                jump: 'magnusgame/assets/sounds/jump.wav',
+                bgm: ['magnusgame/assets/bgms/bgm_01.mp3', 'magnusgame/assets/bgms/bgm_02.mp3', 'magnusgame/assets/bgms/bgm_03.mp3', 'magnusgame/assets/bgms/bgm_04.mp3'],
+                crash: ['magnusgame/assets/sounds/crash.wav', 'magnusgame/assets/sounds/crash-bike.mp3'],
                 end: {
-                    tall: 'assets/sounds/leni-01.wav',    // 서있는 레니
-                    short: 'assets/sounds/leni-03.wav',   // 앉은 레니
-                    flying: 'assets/sounds/end.mp3'       // 당근로켓
+                    tall: 'magnusgame/assets/sounds/leni-01.wav',    // 서있는 레니
+                    short: 'magnusgame/assets/sounds/leni-03.wav',   // 앉은 레니
+                    flying: 'magnusgame/assets/sounds/end.mp3'       // 당근로켓
                 }
             },
 
